Fixed home page lead hearing title text overflow (#144)
Changes:
- Added word wrap to break too long words
- Removed padding right

--- a/assets/sass/kerrokantasi/_fullwidth-hearing.scss
+++ b/assets/sass/kerrokantasi/_fullwidth-hearing.scss
@@ -26,7 +26,8 @@
   }
 
   &-title-wrap {
-    padding-right: 70px;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
 
     .fullwidth-hearing-comments {
       position: absolute;
